# docs/swagger.json
@@ -610,6 +610,71 @@
         },
         "/user/record": {
             "post": {
+                "description": "添加加油记录",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "添加加油记录",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "+Q7xeBtwHmvmwhcMU0ZnQZ6N2jboP8wa5z1MIsrfLck=",
+                        "name": "Token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "number",
+                        "description": "经度",
+                        "name": "longitude",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "number",
+                        "description": "纬度",
+                        "name": "latitude",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "description": "body data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/application.PetrolRecord"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "desc",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/application.ResponseJson"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "code": {
+                                            "type": "integer"
+                                        },
+                                        "msg": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            },
+            "delete": {
                 "description": "删除加油记录",
                 "consumes": [
                     "application/json"
@@ -866,6 +931,10 @@
                     "description": "省份",
                     "type": "string",
                     "example": "省份"
+                },
+                "publish": {
+                    "description": "是否展示",
+                    "type": "boolean"
                 }
             }
         },
@@ -975,6 +1044,9 @@
                     "description": "加油时间",
                     "type": "integer"
                 },
+                "id": {
+                    "type": "integer"
+                },
                 "mileage": {
                     "description": "里程数",
                     "type": "number"
@@ -1078,6 +1150,10 @@
                     "description": "省份",
                     "type": "string",
                     "example": "省份"
+                },
+                "publish": {
+                    "description": "是否展示",
+                    "type": "boolean"
                 }
             }
         },
